refactoring, organize